# violet

./: .clang-tidy  .editorconfig  CMakeLists.txt  LICENSE  README.md  TODO  codecov.yml  conanfile.py
.github/workflows/: conan.yml  coverage.yml  format.yml  lint.yml  macos.yml  ubuntu.yml  windows.yml
examples/: CMakeLists.txt  hello_world.cpp
include/violet/: app.h  log.h  violet.h
src/: hello.cpp
src/violet/: app.test.cpp  app_glfw.cpp  hello.cpp  hello.test.cpp  logger.cpp  logger.h  logger.test.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: CMakeLists.txt
tools/cmake/: FindClangFormat.cmake  FindClangTidy.cmake  conan.cmake  format.cmake  lint.cmake
